--- a/src/css/components/cafe.css
+++ b/src/css/components/cafe.css
@@ -48,20 +48,27 @@
   margin: var(--30px) auto;
 
   display: grid;
-
-  grid-template:
+  grid-template-rows: repeat(2, auto);
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-areas:
     "a b"
     "c b"
     "c d"
+    "c d"
+    "e d"
     "e d"
     "e f"
+    "e f"
+    "e f"
     "g f"
-    "g h" / 1fr 1fr;
+    "g h";
+  grid-auto-rows: min-content;
 
   /* FIXME: dimensions!! */
   row-gap: 14px;
   column-gap: 16px;
-  justify-items: stretch;
+  justify-items: center;
+  align-items: top;
 
   @media (min-width: 992px) {
     grid-column: span 2;
@@ -70,50 +77,62 @@
     grid-template-columns: repeat(4, 1fr);
     grid-template:
       "a b c d"
+      "a b g d"
       "e b g d"
       "e f g h";
     /* grid-auto-flow: row dense; */
+
+    justify-items: stretch;
   }
 
   & picture {
-    grid-row: span 2;
-
-    &:first-of-type,
-    &:last-of-type {
-      grid-row: span 1;
+    &:nth-child(1) {
+      grid-area: a;
+    }
+    &:nth-child(2) {
+      grid-area: b;
+    }
+    &:nth-child(3) {
+      grid-area: c;
+    }
+    &:nth-child(4) {
+      grid-area: d;
+    }
+    &:nth-child(5) {
+      grid-area: e;
+    }
+    &:nth-child(6) {
+      grid-area: f;
+    }
+    &:nth-child(7) {
+      grid-area: g;
+    }
+    &:nth-child(8) {
+      grid-area: h;
     }
 
     @media (min-width: 992px) {
-      grid-row: span 1;
-
-      /* &:nth-child(1) {
-                grid-area: a;
-            } */
-
+      &:nth-child(1) {
+        grid-area: a;
+      }
       &:nth-child(2) {
         grid-area: b;
       }
-
-      /* &:nth-child(3) {
-                grid-area: c;
-            } */
-
+      &:nth-child(3) {
+        grid-area: c;
+      }
       &:nth-child(6) {
         grid-area: d;
       }
-
       &:nth-child(7) {
         grid-area: e;
       }
-
-      /* &:nth-child(8) {
-                grid-area: f;
-            } */
-
+      &:nth-child(8) {
+        grid-area: f;
+      }
       &:nth-child(4) {
         grid-area: h;
       }
-
       &:nth-child(5) {
         grid-area: g;
       }
